cmake_minimum_required(VERSION 2.8.12)
project(miniRT C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
if (CMAKE_C_COMPILER_ID MATCHES "Clang" OR CMAKE_COMPILER_IS_GNUCC)
  add_compile_options(-Wall -Wextra -Werror -pedantic)
endif()
if (MSVC)
  add_compile_options(/W4 /WX /wd4200)
endif()

include_directories(include)

option(TARGET_ARCH "Target architecture's SIMD instruction set (valid values: none SSE SSE2 SSE3 SSSE3 SSE4.1 SSE4.2 AVX AVX2 AVX512 ARMv7-A ARMv8-A ARMv8.1-A ARMv8.2-A ARMv8.3-A ARMv8.4-A ARMv8.5-A ARMv8.6-A ARMv9.0-A ARMv9.2-A)" "none")

if (NOT TARGET_ARCH)
  set(TARGET_ARCH "none")
endif()

function(map_arch arch value)
  if(TARGET_ARCH STREQUAL arch)
    set(TARGET_ARCH_VALUE ${value} PARENT_SCOPE)
  endif()
endfunction(map_arch)

map_arch("none" "NONE")
map_arch("SSE" "SSE")
map_arch("SSE2" "SSE2")
map_arch("SSE3" "SSE3")
map_arch("SSSE3" "SSSE3")
map_arch("SSE4.1" "SSE4_1")
map_arch("SSE4.2" "SSE4_2")
map_arch("AVX" "AVX")
map_arch("AVX2" "AVX2")
map_arch("AVX512" "AVX512")
map_arch("ARMv7-A" "ARMV7A")
map_arch("ARMv8-A" "ARMV8A")
map_arch("ARMv8.1-A" "ARMV8_1A")
map_arch("ARMv8.2-A" "ARMV8_2A")
map_arch("ARMv8.3-A" "ARMV8_3A")
map_arch("ARMv8.4-A" "ARMV8_4A")
map_arch("ARMv8.5-A" "ARMV8_5A")
map_arch("ARMv8.6-A" "ARMV8_6A")
map_arch("ARMv9.0-A" "ARMV9_0A")
map_arch("ARMv9.2-A" "ARMV9_2A")

if(NOT TARGET_ARCH_VALUE)
  message(FATAL_ERROR "Invalid value for TARGET_ARCH. Valid values are: none, SSE, SSE2, SSE3, SSSE3, SSE4.1, SSE4.2, AVX, AVX2, AVX512, ARMv7-A, ARMv8-A, ARMv8.1-A, ARMv8.2-A, ARMv8.3-A, ARMv8.4-A, ARMv8.5-A, ARMv8.6-A, ARMv9.0-A, ARMv9.2-A.")
endif()

add_definitions(-DFT_MATRIX_TARGET_${TARGET_ARCH_VALUE})

file(GLOB_RECURSE SRC "src/*.c")
add_library(a_ft_matrix.${TARGET_ARCH_VALUE} STATIC ${SRC})
set_target_properties(a_ft_matrix.${TARGET_ARCH_VALUE} PROPERTIES OUTPUT_NAME "ft_matrix")
add_library(so_ft_matrix.${TARGET_ARCH_VALUE} STATIC ${SRC})
set_target_properties(so_ft_matrix.${TARGET_ARCH_VALUE} PROPERTIES OUTPUT_NAME "ft_matrix")
